# protobuf-vs-json

./: Cargo.toml  README.md  Results.md  build.rs  json_lg.json  json_md.json  json_sm.json  protobuf_lg  protobuf_md  protobuf_sm
src/: lib.rs  main.rs  spec.proto
src/convert/: large.rs  mid.rs  mod.rs  small.rs
src/generate/: large.rs  mid.rs  mod.rs  small.rs
src/structures/: large.rs  mid.rs  mod.rs  small.rs
