[package]
name = "protobufVsJson"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
prost = "0.12.4"
prost-types = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
prost-build = { version = "0.12.4" }
